test/error/static-field-not-mutable.dsk
let S = struct
    let x = "value"
    y: int
end

let s = S(y = 1)
S.x = "new"
